k8s/app-full/service-app.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-8
  labels:
    app: go-demo-8
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-demo-8
