k8s/app-full/service-repeater.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: repeater
  labels:
    app: repeater
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: repeater
